--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,6 @@ requests = "^2.28.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[black]
+max-line-length = 88
