--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-dotenv = "^0.21.0"
 pre-commit = "^2.20.0"
 requests = "^2.28.1"
 numpy = "^1.23.5"
+feather-format = "^0.4.1"
 
 
 [build-system]
