--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pre-commit = "^2.20.0"
 requests = "^2.28.1"
 numpy = "^1.23.5"
 feather-format = "^0.4.1"
+tabulate = "^0.9.0"
 
 
 [build-system]
